realtime hien thi xac nhan cho nhan vien

--- a/views/cms/sidebar.ejs
+++ b/views/cms/sidebar.ejs
@@ -123,12 +123,12 @@
                         <span>Menu</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="tables.html">
+                    <a class="nav-link" href="/cms/bill">
                         <i class="fas fa-fw fa-table"></i>
                         <span>Bills</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="tables.html">
+                    <a class="nav-link" href="/cms/feedback">
                         <i class="fas fa-fw fa-table"></i>
                         <span>Feedback</span></a>
                 </li>
