them thong bao cho tat ca cac trang nguoi dung

--- a/views/Xacnhan/xacnhancuanguoidung.ejs
+++ b/views/Xacnhan/xacnhancuanguoidung.ejs
@@ -195,6 +195,7 @@
 <script>
   //id="myform" action="/themvaogiohang" method="post" 
 </script>
+<%- include('function/js/noti') %>
   </body>
 
 </html>
