--- a/views/dathangthanhcong.ejs
+++ b/views/dathangthanhcong.ejs
@@ -60,6 +60,7 @@
       <div class="map-wrap" id="map" data-aos="fade" style="background-color: white;"></div>
 
       <%- include("function/footer.ejs") %>
+      <%- include('function/js/noti') %>
 
   </body>
 
