--- a/views/index.ejs
+++ b/views/index.ejs
@@ -169,6 +169,7 @@
 
       <%- include("function/footer.ejs") %>
 <%- include("notification/noti") %> 
+<%- include('function/js/noti') %>
 </body>
 
 </html>
