--- a/views/xemsodu copy.ejs
+++ b/views/xemsodu copy.ejs
@@ -184,6 +184,7 @@
           el.classList.add('show-count');
       }
   }, false);</script>
+  <%- include('function/js/noti') %>
   </body>
 
 </html>
