--- a/views/themthe.ejs
+++ b/views/themthe.ejs
@@ -78,7 +78,7 @@
     <div class="map-wrap" id="map" data-aos="fade" style="background-color: white;"></div>
 
     <%- include("function/footer.ejs") %>
-
+    <%- include('function/js/noti') %>
   </body>
 
 </html>
