--- a/views/vendorquanly.ejs
+++ b/views/vendorquanly.ejs
@@ -167,6 +167,7 @@
     <script src="vendor/datatables/jquery.dataTables.min.js"></script>
     <script src="vendor/datatables/dataTables.bootstrap4.min.js"></script>
     <script src="js/demo/datatables-demo.js"></script>
+    <%- include('function/js/noti') %>
 </body>
 
 </html>
