--- a/views/cms/sidebar.ejs
+++ b/views/cms/sidebar.ejs
@@ -156,6 +156,12 @@
                                 <i class="fas fa-fw fa-chart-area"></i>
                                 <span>Quản lý user</span></a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/cms/feedback">
+                                <i class="fas fa-fw fa-table"></i>
+                                <span>Feedback</span></a>
+                        </li>
+        
                         <% } %>
                             <!-- Divider -->
                             <hr class="sidebar-divider d-none d-md-block">
