thiet ke lai thong bao cho nguoi dung

--- a/views/function/js/noti.ejs
+++ b/views/function/js/noti.ejs
@@ -13,7 +13,7 @@
         width: 400px;
         background: white;
         border-radius: 10px;
-        border: 1px solid gray;
+        border: 1px solid rgb(187, 187, 187);
     }
 </style>
 <template id="template_noti">
@@ -21,9 +21,9 @@
         <a href="/xacnhanorder">
             <div class="card_noti">
                 <div class="noti-head" style="padding: 4px; border-radius: 6px; background: gray;">
-                    <h5>Thông báo</h5>
+                    <h5 style="text-align: center;">Thông báo</h5>
                 </div>
-                <div class="noti-body">
+                <div class="noti-body pl-1">
 
                 </div>
             </div>
