update navbar: bo xac nhan don hang cua user

--- a/views/function/navbar.ejs
+++ b/views/function/navbar.ejs
@@ -40,7 +40,7 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="/cms/order">Xác nhận</a>
                             </li>
-                            <% } else if( role == 'nhanvien' || role == 'user') {  %>
+                            <% } else if( role == 'nhanvien' ) {  %>
                                 <li class="nav-item">
                                     <a class="nav-link" href="/xacnhan">Xác nhận</a>
                                 </li>
