thêm thanh toan vnpay + lich su nap tien

--- a/views/function/navbar.ejs
+++ b/views/function/navbar.ejs
@@ -21,8 +21,9 @@
                             <a class="nav-link" href="/naptien">Nạp tiền</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/dangxuat">Đăng xuất</a>
+                            <a class="nav-link" href="/lichsunaptien">Xem lịch sử nạp tiền</a>
                         </li>
+                        
                         <li class="nav-item">
                             <a class="nav-link" href="/xemsodu">Xem số dư</a>
                         </li>
@@ -35,7 +36,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="/danhgia">Đánh giá</a>
                         </li>
-
+                        <li class="nav-item">
+                            <a class="nav-link" href="/dangxuat">Đăng xuất</a>
+                        </li>
                         <% if (role == 'daubep'){ %>
                             <li class="nav-item">
                                 <a class="nav-link" href="/cms/order">Xác nhận</a>
