--- a/views/Xacnhan/xacnhancuanhanvien.ejs
+++ b/views/Xacnhan/xacnhancuanhanvien.ejs
@@ -130,7 +130,7 @@
                                   </div>
                                   <% }) %>
 
-
+                                  <% if (role=='nhanvien') {%>
                                   <div class="action" style="float:right; padding:20px 0px 10px 10px;">
                                     <a href="#" class="btn btn-success btn-circle btn-xacnhan"
                                       xacnhan_id="<%= element.id %>">
@@ -140,7 +140,7 @@
                                     <i class="fas fa-trash"></i>
                                 </a> -->
                                   </div>
-
+                                  <% } %>
                                 </div>
                               </div>
                             </div>
@@ -255,7 +255,7 @@
         var temporder = document.getElementById('order');
         var order = temporder.content.cloneNode(true);
         $(order.querySelector('[donhang_item="_dataid"]')).attr('donhang_item', data.donhang);
-        $(order.querySelector('h6.m-0')).text('Đơn hàng #'+data.donhang);
+        $(order.querySelector('h6.m-0')).text('Đơn hàng #' + data.donhang);
         $(order.querySelector('a[href="#collapse_dataid"]')).attr('href', '#collapse' + data.donhang);
         $(order.querySelector('a[aria-controls="collapse_dataid"]')).attr('aria-controls', 'collapse' + data.donhang);
         $(order.querySelector('#collapse_dataid')).attr('id', 'collapse' + data.donhang);
