--- a/views/cms/order/index.ejs
+++ b/views/cms/order/index.ejs
@@ -38,12 +38,12 @@
 
 
                     <div class="action" style="float:right; padding:20px 0px 10px 10px;">
+                        <a href="#" class="btn btn-danger btn-circle">
+                            <i class="fas fa-times"></i>
+                        </a>
                         <a href="#" class="btn btn-success btn-circle btn-xacnhan" xacnhan_id="<%= element.id %>">
                             <i class="fas fa-check"></i>
                         </a>
-                        <!-- <a href="#" class="btn btn-danger btn-circle">
-                            <i class="fas fa-trash"></i>
-                        </a> -->
                     </div>
 
                 </div>
