fix UI, fix order id

--- a/views/adminquanlynguoidunguser.ejs
+++ b/views/adminquanlynguoidunguser.ejs
@@ -81,7 +81,7 @@
 
                                     <a id="nguoidung" href="/cms/quanlynguoidung/nguoidung"
                                         class="m-0 font-weight-bold text-primary"
-                                        style="padding: 10px; background-color:lightblue ">Người dùng</a>
+                                        style="padding: 10px;  ">Người dùng</a>
                                 </div>
                                 <div class="col-9">
                                     <h4 class="m-0 font-weight-bold text-primary" id="status">
@@ -100,25 +100,12 @@
                             </div>
                                 <div class="col-4">
                                     <div class="wrap">
-                                        <div class="search">
-                                            <form action="/searchusercms" method="post">
-                                                <input type="text" name="keyword" class="searchTerm col-12" placeholder="Search">
-                                            <button type="submit" class="searchButton">
-                                                <i class="fa fa-search"></i>
-                                            </button>
-                                            </form>
-                                            
-                                        </div>
+                                       
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <form action="/searchusercms" method="post">
-                            <input type="text" name="keyword" class="searchTerm col-12" placeholder="Search">
-                                            <button type="submit" class="searchButton">
-                                                <i class="fa fa-search"></i>
-                                            </button>
-                        </form>
+                       
                         <div class="form formcms" style="width: 30%;">
                             <button type="" id="huy" class="btn btn-danger" style="display: none;">Hủy</button>
 
