--- a/views/cms/order/index.ejs
+++ b/views/cms/order/index.ejs
@@ -7,7 +7,7 @@
             <!-- Card Header - Accordion -->
             <a href="#collapse<%= element.id %>" class="d-block card-header py-3 collapsed" data-toggle="collapse"
                 role="button" aria-expanded="false" aria-controls="collapse<%= element.id %>">
-                <h6 class="m-0 font-weight-bold text-primary">Đơn hàng #<%= element.id %> </h6>
+                <h6 class="m-0 font-weight-bold text-primary">Đơn hàng #<%= element.iddonhang %> </h6>
             </a>
             <!-- Card Content - Collapse -->
             <div class="collapse" id="collapse<%= element.id %>">
