update navbar daubep add  Thêm món ăn

--- a/views/adminquanlynguoidung.ejs
+++ b/views/adminquanlynguoidung.ejs
@@ -28,7 +28,7 @@
                                         <div class="card-header py-3">
                                             <div class="row">
                                                 <a id="vendor" href="" class="m-0 font-weight-bold text-primary" style="padding: 10px; background-color:lightblue  ;">Vendor</a>
-                                                <a id="thungan" href="" class="m-0 font-weight-bold text-primary" style="padding: 10px;">Thu ngân</a>
+                                                <!-- <a id="thungan" href="" class="m-0 font-weight-bold text-primary" style="padding: 10px;">Thu ngân</a> -->
                                                 <button id="update" style="display: none;" class="btn btn-success"></button>
                                                 <button id="updatethungan" style="display: none;" class="btn btn-success"></button>
                                                 <button id="suavendor" style="display: none;" class="btn btn-success"></button>
