--- a/views/function/navbar.ejs
+++ b/views/function/navbar.ejs
@@ -43,6 +43,10 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="/cms/order">Xác nhận</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/cms/foods">
+                                    <span>Thêm món ăn</span></a>
+                            </li>
                             <% } else if( role == 'nhanvien' ) {  %>
                                 <li class="nav-item">
                                     <a class="nav-link" href="/xacnhan">Xác nhận</a>
