--- a/views/cms/sidebar.ejs
+++ b/views/cms/sidebar.ejs
@@ -149,7 +149,7 @@
                         <li class="nav-item">
                             <a class="nav-link" href="/cms/quanlynguoidung">
                                 <i class="fas fa-fw fa-chart-area"></i>
-                                <span>Quản lý vendor/thu ngân</span></a>
+                                <span>Quản lý vendor</span></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/cms/cmsquanlyuser">
