--- a/views/cms/order/index.ejs
+++ b/views/cms/order/index.ejs
@@ -71,12 +71,13 @@
 
 
                     <div class="action" style="float:right; padding:20px 0px 10px 10px;">
+                        <a href="#" class="btn btn-danger btn-circle">
+                            <i class="fas fa-times"></i>
+                        </a>
                         <a href="#" class="btn btn-success btn-circle btn-xacnhan" xacnhan_id="_dataid" iddonhang="_iddonhang">
                             <i class="fas fa-check"></i>
                         </a>
-                        <!-- <a href="#" class="btn btn-danger btn-circle">
-                            <i class="fas fa-trash"></i>
-                        </a> -->
+                        
                     </div>
 
                 </div>
