--- a/views/index.ejs
+++ b/views/index.ejs
@@ -118,7 +118,7 @@
                   <select class="form-control" name="vendor" id="select_vendor" style="margin: 0% 50% 20px; transform: translateX(-50%); color: #ff7a5c!important; outline: none;">
                     <option value="">Tất cả</option>
                     <% quayhang.forEach(qh=>{%>
-                    <option value="<%= qh.username %> "><%= qh.tenquay %> </option>
+                    <option value="<%= qh.username %>" <% if(vdSelected==qh.username){ %> selected <%}%>> <%= qh.tenquay %> </option>
                     <%}) %>
                   </select>
                 </form>
@@ -130,7 +130,7 @@
                     <div class="row">
                       <div class="card border-left-primary shadow h-100 py-2 d-flex flex-row">
                         <img src="/uploads/foods/<%= element.image %>"
-                          style="width: 25%; height: 140px; border-radius: 5px; margin-left: 8px;" alt="food-img">
+                          style="width:25%; height: 140px; border-radius: 5px; margin-left: 8px;" alt="food-img">
                         <div class="card-body">
                           <div class="row no-gutters align-items-center">
                             <div class="col mr-2">
