fix hien thi index

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -128,7 +128,7 @@
 
                     <% data.forEach(element => { %>
                     <div class="row">
-                      <div class="card border-left-primary shadow h-100 py-2 d-flex flex-row">
+                      <div class="card border-left-primary shadow h-100 py-2 d-flex flex-row" style="width: 100%">
                         <img src="/uploads/foods/<%= element.image %>"
                           style="width:25%; height: 140px; border-radius: 5px; margin-left: 8px;" alt="food-img">
                         <div class="card-body">
